--- a/css/design-system.css
+++ b/css/design-system.css
@@ -82,7 +82,7 @@ html {
 }
 
 body {
-    font-family: var(--font-family-base);
+    font-family: var(--font-family-body);
     font-size: var(--font-size-base);
     line-height: var(--line-height-normal);
     color: var(--text-primary);
