--- a/src/partials/hero.hbs
+++ b/src/partials/hero.hbs
@@ -26,7 +26,7 @@
                 </p>
 
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start mb-8">
-                    <a href="https://ticket-masala-demos.fly.dev/"
+                    <a href="https://ticket-masala-portal-desgoffe.fly.dev/"
                         class="btn btn-masala px-8 py-4 text-lg no-underline inline-flex items-center justify-center">
                         <i class="fas fa-rocket mr-2" aria-hidden="true"></i> Explore Ecosystem
                     </a>
